--- a/src/main/resources/templates/basic/items.html
+++ b/src/main/resources/templates/basic/items.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link  th:href="@{/css/bootstrap.min.css}"  rel="stylesheet" />
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 </head>
 <body>
 <div class="container" style="max-width: 600px">
@@ -11,7 +12,7 @@
     </div>
             <div class="row">
                 <div class="col">
-                    <button class="btn btn-primary float-end" th:onclick="|location.href='@{/basic/items/add}'|" type="button">상품 등록</button>
+                    <button class="btn btn-primary float-end" onclick="location.href='addForm.html'" th:onclick="|location.href='@{/basic/items/add}'|" type="button">상품 등록</button>
                 </div>
             </div>
     <hr class="my-4">
@@ -25,18 +26,15 @@
                         <th>수량</th>
                     </tr>
                 </thead>
-                    <tbody>
+                <tbody>
                     <tr th:each="item : ${items}">
-                        <td>
-                            <a href="item.html" th:href="@{/basic/items/{itemId} (itemId=${item.id})}" th:text="${item.id}">회원id</a>
-                        </td>
-                        <td>
-                            <a href="item.html" th:href="@{|/basic/items/${item.id}|}" th:text="${item.itemName}">상품명</a>
-                        </td>
+                        <td><a href="item.html" th:href="@{/basic/items/{itemId} (itemId=${item.id})}" th:text="${item.id}">회원id</a></td>
+                        <td><!--/*@thymesVar id="itemName" type=""*/-->
+                        <a href="item.html" th:href="@{|/basic/items/${item.id}|}" th:text="${item.itemName}">상품명</a></td>
                         <td th:text="${item.price}">10000</td>
                         <td th:text="${item.quantity}">10</td>
                     </tr>
-                    </tbody>
+                </tbody>
             </table>
         </div>
 </div> <!-- /container -->
